Bug 140198 - Base text field will not retain multi-line setting
Summary: Base text field will not retain multi-line setting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2021-02-05 20:02 UTC by Stang
Modified: 2021-03-06 21:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Base file for text box multi-line (11.73 KB, application/vnd.oasis.opendocument.database)
2021-02-05 20:04 UTC, Stang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stang 2021-02-05 20:02:50 UTC
Description:
Text control or text box column in table control will not retain multi-line setting.  Multi-line with formatting will not retain and causes the Data tab to disappear.

Steps to Reproduce:
1. Edit form
2. Set text box property 'Text type' to 'Multi-line'
3. Close form

Actual Results:
Text displays as single line

Expected Results:
Multiple lines of text.


Reproducible: Always


User Profile Reset: No



Additional Info:
Works correctly in v7.0.4.2
Comment 1 Stang 2021-02-05 20:04:12 UTC
Created attachment 169515 [details]
Base file for text box multi-line
Comment 2 BogdanB 2021-02-05 20:17:47 UTC
That properties is not saved.
After I reopen the file is single line


Confirm on
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 40b56cd8da8c38582dc4660b486993d1b4711535
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

It's ok in 7.0.4, as you said.

I will try to bibisect this.
Comment 3 BogdanB 2021-02-05 20:24:22 UTC
 d0f437e7b63f5f34e698cec0f7381893cadc82bc is the first bad commit
commit d0f437e7b63f5f34e698cec0f7381893cadc82bc
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Dec 4 17:46:57 2020 +0100

    source 3d0084770923ed8c17e496965abae862a4796e63
    
    source 3d0084770923ed8c17e496965abae862a4796e63

 instdir/program/libxolo.so | Bin 6335416 -> 6335400 bytes
 instdir/program/setuprc    |   2 +-
 instdir/program/versionrc  |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)
Comment 4 BogdanB 2021-02-05 20:27:39 UTC
Who could add Noel on this bug report?...
Comment 5 Commit Notification 2021-02-18 11:09:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63d14566ba93b87f23a7ba68f8ea733cf19be101

tdf#140198 Base text field will not retain multi-line setting

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2021-02-18 12:06:47 UTC
*** Bug 140486 has been marked as a duplicate of this bug. ***
Comment 7 BogdanB 2021-02-19 18:43:20 UTC
Working well in
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 7b649f835cc00ed76927c6821a135605609bed4e
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2021-02-24 14:49:58 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c89f5fa26a8ec6e36ddd5562a5c3c276f9e4ff80

tdf#140198: sw: Add UItest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Stang 2021-03-06 21:20:51 UTC
While I agree this works in a single text box control, it still is not working properly in a text column in a table control or in a table view.
Comment 10 Stang 2021-03-06 21:25:07 UTC
Please ignore last comment.  Works in table control also.