tdf#140198 Base text field will not retain multi-line setting

regression due to a combination of
    commit 3de38e95561ab7ca114d9f3307702ba89c4e3e9a
    Date:   Tue Nov 10 19:20:06 2020 +0200
    use fastparser in forms
and
    commit 3d0084770923ed8c17e496965abae862a4796e63
    Date:   Fri Dec 4 16:14:16 2020 +0200
    fastparser in a couple of random places
The first one introduced the bug, due to the fallback
paths from fast to slowparser, things kept working, until
the second one removed the fallback.

Change-Id: I1aaae902eda2aaf8f5151404ddb3577f4582757d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111101
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>